--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,6 @@ githubBranch=master
 tags=kotlin,consul,validation,service-discovery
 category=Cloud Native
 publicationDate=27 Jul 2018
-micronautVersion=1.0.0.RC3
+micronautVersion=1.0.0
 kotlinVersion=1.2.61
 spekVersion=2.0.0-alpha.1
