--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,6 @@ copyright=Copies of this document may be made for your own use and for distribut
 githubSlug=micronaut-guides/micronaut-microservices-services-discover-consul-kotlin
 githubBranch=master
 tags=kotlin,consul,validation,service-discovery
-category=Cloud Native
+category=Service Discovery
 publicationDate=27 Jul 2018
 micronautVersion=1.2.6
