--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ copyright=Copies of this document may be made for your own use and for distribut
 githubSlug=micronaut-guides/micronaut-microservices-services-discover-consul-kotlin
 githubBranch=master
 tags=kotlin,consul,validation,service-discovery
-category=Service Discovery
+category=Cloud Native
 publicationDate=27 Jul 2018
-micronautVersion=1.2.6
+micronautVersion=2.0.0.RC2
+kotlinVersion=1.3.72
